<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.poran.instanthscresult.SelectType"
    android:weightSum="1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/feature"
        android:scaleType="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.59"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/checkedonline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="checkedType"
            android:background="@drawable/style"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="checkedType"
                android:id="@+id/img"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:src="@drawable/wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/internet"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkedoffline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/style"
            android:onClick="checkedType">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="1"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />
        </LinearLayout>



    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bannerType"
        android:layout_gravity="bottom|center_horizontal"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/testBanner_ads_unit_id"

        >

    </com.google.android.gms.ads.AdView>


</LinearLayout>
